--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!-- saved from url=(0081)file:///C:/Users/Marcos/Downloads/treino_aleat%C3%B3rio/aleat%C3%B3rio/index.html -->
-<html lang="pt-br"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style type="text/css" id="operaUserStyle"></style></head><body>HTML 
+<html lang="pt-br"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style type="text/css" id="operaUserStyle"></style></head><body>
 
 
 
@@ -20,7 +20,7 @@
             <div class="perfil_conteiner">
                 <!-- Foto de Perfil -->
                 <div class="perfil_imagem">
-                    <img src="imagens/Alex-Pereira-UFC.jpg" alt="foto do poatan">
+                    <img src="imagens/18143f90-d691-467b-afb6-f9c4d4b84b28.jpg" alt="foto do poatan">
                 </div>
                 
                 <!-- Informações do Nome e Título -->
@@ -96,7 +96,7 @@
                     <li>Segurança de Sistemas</li>
                     <li> Gerenciamento de Projetos de TI
                     </li>
-                    <li>amar muito</li>
+                    <li>HTML 5 e CSS</li>
                 </ul>
             </div>
         </div>
@@ -126,7 +126,7 @@
                 <li>Boa comunicação</li>
                 <li>Trabalho em equipe</li>
                 <li>Solucionador de problemas</li>
-                <li>150 embaixadinhas sem deixar cair</li>
+                <li>Aprendizado Rápido</li>
             </ul>
         </div>
         
